--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^26.6.3"
+  },
   "scripts": {
-    "test": "npm test",
+    "test": "jest",
     "watch": "nodemon server.js",
     "start": "node server.js"
   },
